--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -74,5 +74,25 @@
       <div class="post-date">2 days ago</div>
     </div>
   </div>
+
+  <!-- Modals for creating a post -->
+  <div id="createPostModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('#createPostModal')">&times;</span>
+      <div id="modalContent">
+        <form action="" method="post" novalidate>
+          {% csrf_token %} 
+          {{ form.as_p }}
+          <input class="btn" type="submit" value="Create Post" />
+        </form>
+      </div>
+    </div>
+  </div>
 </main>
+<script>
+  function closeModal(id) {
+    const closeBtn = document.querySelector(id);
+    closeBtn.style.display = "none";
+  }
+</script>
 {% endblock %}
