Working on the profile creation form.

--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -101,6 +101,7 @@
 {% else %}
 <main>
   <p>You haven't created your user profile yet.</p>
+  <button class="create-profile-btn">Create Profile</button>
 </main>
 {% endif %}
 <script>
