Working on the profile creation form.

--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -128,6 +128,20 @@
             </div>
           </div>
     </div>
+
+    <!-- Modal for creating a profile -->
+  <div id="createProfileModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('#createProfileModal')">&times;</span>
+      <div id="modalContent">s
+        <form action="" method="post" novalidate>
+          {% csrf_token %} 
+          {{ profile_form.as_p }}
+          <input class="btn" type="submit" value="Create Post" />
+        </form>
+      </div>
+    </div>
+  </div>
 </main>
 {% else %}
 <main>
