--- a/app/project/community/static/community/styles/_feed.scss
+++ b/app/project/community/static/community/styles/_feed.scss
@@ -26,35 +26,7 @@ main#feed {
         font-size: 3rem;
       }
 
-      form {
-        p {
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-          gap: 8px;
-          align-items: flex-start;
-        }
-  
-        input, textarea {
-          width: 100%;
-          height: 2rem;
-          font-size: 0.9rem;
-        }
-  
-        input#id_is_completed {
-          width: 30px;
-        }
-    
-        textarea {
-          height: 200px;
-        }
-    
-        label {
-          font-size: 1.2rem;
-          font-weight: bold;
-          width: 100%;
-        }
-      }
+      @include form();
 
     }
   }
