--- a/app/project/community/static/community/styles/_mixins.scss
+++ b/app/project/community/static/community/styles/_mixins.scss
@@ -68,3 +68,35 @@
     }
   }
 }
+
+@mixin form() {
+  form {
+    p {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 8px;
+      align-items: flex-start;
+    }
+
+    input, textarea {
+      width: 100%;
+      height: 2rem;
+      font-size: 0.9rem;
+    }
+
+    input#id_is_completed {
+      width: 30px;
+    }
+
+    textarea {
+      height: 200px;
+    }
+
+    label {
+      font-size: 1.2rem;
+      font-weight: bold;
+      width: 100%;
+    }
+  }
+}
