--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -292,6 +292,29 @@ main#profile .modal .modal-content .post .post-date {
   font-size: 0.8rem;
   padding-top: 8px;
 }
+main#profile .modal .modal-content form p {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 8px;
+  align-items: flex-start;
+}
+main#profile .modal .modal-content form input, main#profile .modal .modal-content form textarea {
+  width: 100%;
+  height: 2rem;
+  font-size: 0.9rem;
+}
+main#profile .modal .modal-content form input#id_is_completed {
+  width: 30px;
+}
+main#profile .modal .modal-content form textarea {
+  height: 200px;
+}
+main#profile .modal .modal-content form label {
+  font-size: 1.2rem;
+  font-weight: bold;
+  width: 100%;
+}
 
 @media only screen and (max-width: 400px) {
   main#profile div.profile-top {
