--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <!-- Modals for creating a post -->
+  <!-- Modal for creating a post -->
   <div id="createPostModal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('#createPostModal')">&times;</span>
@@ -86,6 +86,20 @@
         <form action="" method="post" novalidate>
           {% csrf_token %} 
           {{ form.as_p }}
+          <input class="btn" type="submit" value="Create Post" />
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal for creating a profile -->
+  <div id="createProfileModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('#createProfileModal')">&times;</span>
+      <div id="modalContent">s
+        <form action="" method="post" novalidate>
+          {% csrf_token %} 
+          {{ profile_form.as_p }}
           <input class="btn" type="submit" value="Create Post" />
         </form>
       </div>
