Working on the profile creation form.

--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -3,6 +3,7 @@
 {% block scripts %}
 <script src="{% static './community/scripts/toggle-posts.js' %}" defer></script>
 <script src="{% static './community/scripts/view-post.js' %}" defer></script>
+<script src="{% static './community/scripts/create-profile.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 {% if user_profile %}
