--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -3,7 +3,6 @@
 {% block scripts %}
 <script src="{% static './community/scripts/toggle-like.js' %}" defer></script>
 <script src="{% static './community/scripts/create-post.js' %}" defer></script>
-<script src="{% static './community/scripts/create-profile.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 {% if user_profile %}
@@ -93,19 +92,6 @@
     </div>
   </div>
 
-  <!-- Modal for creating a profile -->
-  <div id="createProfileModal" class="modal">
-    <div class="modal-content">
-      <span class="close-btn" onclick="closeModal('#createProfileModal')">&times;</span>
-      <div id="modalContent">s
-        <form action="" method="post" novalidate>
-          {% csrf_token %} 
-          {{ profile_form.as_p }}
-          <input class="btn" type="submit" value="Create Post" />
-        </form>
-      </div>
-    </div>
-  </div>
 </main>
 {% else %}
 <main>
@@ -116,7 +102,7 @@
 {% else %}
 <main>
   <p>You haven't created your user profile yet.</p>
-  <button class="create-profile-btn">Create Profile</button>
+  <a href="{% url 'community:profile' %}"><button>Go to Profile page</button></a>
 </main>
 {% endif %}
 <script>
