--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -129,25 +129,25 @@
             </div>
           </div>
     </div>
+  </main>
+{% else %}
+<main id="profile">
+  <p>You haven't created your user profile yet.</p>
+  <button class="create-profile-btn">Create Profile</button>
 
-    <!-- Modal for creating a profile -->
+  <!-- Modal for creating a profile -->
   <div id="createProfileModal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('#createProfileModal')">&times;</span>
-      <div id="modalContent">s
+      <div id="modalContent">
         <form action="" method="post" novalidate>
           {% csrf_token %} 
-          {{ profile_form.as_p }}
+          {{ form.as_p }}
           <input class="btn" type="submit" value="Create Post" />
         </form>
       </div>
     </div>
   </div>
-</main>
-{% else %}
-<main>
-  <p>You haven't created your user profile yet.</p>
-  <button class="create-profile-btn">Create Profile</button>
 </main>
 {% endif %}
 <script>
