--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -14,9 +14,16 @@ main#profile {
       gap: 32px;
 
       .profile-photo {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        border: 1px solid $black;
+
         img {
-          width: 150px;
-          height: 150px;
+          width: inherit;
+          height: inherit;
+          object-fit: cover;
+          border-radius: 50%;
         }
       }
 
