--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -135,10 +135,10 @@
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('#createProfileModal')">&times;</span>
       <div id="modalContent">
-        <form action="" method="post" novalidate>
+        <form action="" method="post" novalidate enctype="multipart/form-data">
           {% csrf_token %} 
           {{ form.as_p }}
-          <input class="btn" type="submit" value="Create Post" />
+          <input class="btn" type="submit" value="Create Profile" />
         </form>
       </div>
     </div>
