--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -83,7 +83,7 @@
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('#createPostModal')">&times;</span>
       <div id="modalContent">
-        <form action="" method="post" novalidate>
+        <form action="" method="post" novalidate enctype="multipart/form-data">
           {% csrf_token %} 
           {{ form.as_p }}
           <input class="btn" type="submit" value="Create Post" />
