--- a/app/project/community/static/community/styles/_mixins.scss
+++ b/app/project/community/static/community/styles/_mixins.scss
@@ -59,6 +59,14 @@
       &:hover {
         cursor: pointer;
       }
+
+      .comment {
+        font-size: 0.9rem;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
     }
 
     .post-date {
