--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -296,6 +296,12 @@ main#profile .modal .modal-content .post .post-comments {
 main#profile .modal .modal-content .post .post-comments:hover {
   cursor: pointer;
 }
+main#profile .modal .modal-content .post .post-comments .comment {
+  font-size: 0.9rem;
+}
+main#profile .modal .modal-content .post .post-comments .comment:hover {
+  cursor: pointer;
+}
 main#profile .modal .modal-content .post .post-date {
   font-weight: 300;
   font-size: 0.8rem;
@@ -451,6 +457,12 @@ main#feed .posts .post .post-comments {
   font-size: 0.9rem;
 }
 main#feed .posts .post .post-comments:hover {
+  cursor: pointer;
+}
+main#feed .posts .post .post-comments .comment {
+  font-size: 0.9rem;
+}
+main#feed .posts .post .post-comments .comment:hover {
   cursor: pointer;
 }
 main#feed .posts .post .post-date {
