--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -6,113 +6,113 @@
 {% endblock %}
 {% block content %}
 {% if user_profile %}
-{% if posts %}
-<main id="feed">
-  <h2>Feed</h2>
-  <button class="create-post-btn">Create New Post</button>
-  <div class="posts">
-    {% for post in posts %}
-    <div class="post">
-      <div class="post-img">
-        <img src="{{ post.post_picture.url }}" alt="User post">
+  {% if posts %}
+  <main id="feed">
+    <h2>Feed</h2>
+    <button class="create-post-btn">Create New Post</button>
+    <div class="posts">
+      {% for post in posts %}
+      <div class="post">
+        <div class="post-img">
+          <img src="{{ post.post_picture.url }}" alt="User post">
+        </div>
+        <div class="post-btns">
+          <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
+          <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+        </div>
+        <div class="post-likes"><span class="like-count">{{ post.get_like_count }}</span> likes</div>
+        <div class="post-caption">
+          <span class="username">{{ post.user_profile.username }}</span>
+          <span class="caption-text">{{ post.post_caption }}</span>
+        </div>
+        {% for comment in post.comments.all %}
+        <div class="post-comments">{{ comment.text }}</div>
+        {% endfor %}
+        <div class="post-date">{{ post.created_at }}</div>
       </div>
-      <div class="post-btns">
-        <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
-        <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
-      </div>
-      <div class="post-likes"><span class="like-count">{{ post.get_like_count }}</span> likes</div>
-      <div class="post-caption">
-        <span class="username">{{ post.user_profile.username }}</span>
-        <span class="caption-text">{{ post.post_caption }}</span>
-      </div>
-      {% for comment in post.comments %}
-      <div class="post-comments">{{ comment.text }}</div>
       {% endfor %}
-      <div class="post-date">{{ comment.created_at }}</div>
-    </div>
-    {% endfor %}
 
-    <div class="post">
-      <div class="post-img"></div>
-      <div class="post-btns">
-        <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
-        <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+      <div class="post">
+        <div class="post-img"></div>
+        <div class="post-btns">
+          <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
+          <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+        </div>
+        <div class="post-likes"><span class="like-count">124</span> likes</div>
+        <div class="post-caption">
+          <span class="username">username</span>
+          <span class="caption-text">caption text will be placed...</span>
+        </div>
+        <div class="post-comments">View all 12 comments</div>
+        <div class="post-date">2 days ago</div>
       </div>
-      <div class="post-likes"><span class="like-count">124</span> likes</div>
-      <div class="post-caption">
-        <span class="username">username</span>
-        <span class="caption-text">caption text will be placed...</span>
+      
+      <div class="post">
+        <div class="post-img"></div>
+        <div class="post-btns">
+          <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
+          <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+        </div>
+        <div class="post-likes"><span class="like-count">124</span> likes</div>
+        <div class="post-caption">
+          <span class="username">username</span>
+          <span class="caption-text">caption text will be placed...</span>
+        </div>
+        <div class="post-comments">View all 12 comments</div>
+        <div class="post-date">2 days ago</div>
       </div>
-      <div class="post-comments">View all 12 comments</div>
-      <div class="post-date">2 days ago</div>
-    </div>
-    
-    <div class="post">
-      <div class="post-img"></div>
-      <div class="post-btns">
-        <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
-        <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+
+      <div class="post">
+        <div class="post-img"></div>
+        <div class="post-btns">
+          <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
+          <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+        </div>
+        <div class="post-likes"><span class="like-count">124</span> likes</div>
+        <div class="post-caption">
+          <span class="username">username</span>
+          <span class="caption-text">caption text will be placed...</span>
+        </div>
+        <div class="post-comments">View all 12 comments</div>
+        <div class="post-date">2 days ago</div>
       </div>
-      <div class="post-likes"><span class="like-count">124</span> likes</div>
-      <div class="post-caption">
-        <span class="username">username</span>
-        <span class="caption-text">caption text will be placed...</span>
-      </div>
-      <div class="post-comments">View all 12 comments</div>
-      <div class="post-date">2 days ago</div>
     </div>
 
-    <div class="post">
-      <div class="post-img"></div>
-      <div class="post-btns">
-        <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
-        <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
-      </div>
-      <div class="post-likes"><span class="like-count">124</span> likes</div>
-      <div class="post-caption">
-        <span class="username">username</span>
-        <span class="caption-text">caption text will be placed...</span>
-      </div>
-      <div class="post-comments">View all 12 comments</div>
-      <div class="post-date">2 days ago</div>
-    </div>
-  </div>
-
-  <!-- Modal for creating a post -->
-  <div id="createPostModal" class="modal">
-    <div class="modal-content">
-      <span class="close-btn" onclick="closeModal('#createPostModal')">&times;</span>
-      <div id="modalContent">
-        <form action="" method="post" novalidate enctype="multipart/form-data">
-          {% csrf_token %} 
-          {{ form.as_p }}
-          <input class="btn" type="submit" value="Create Post" />
-        </form>
+    <!-- Modal for creating a post -->
+    <div id="createPostModal" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" onclick="closeModal('#createPostModal')">&times;</span>
+        <div id="modalContent">
+          <form action="" method="post" novalidate enctype="multipart/form-data">
+            {% csrf_token %} 
+            {{ form.as_p }}
+            <input class="btn" type="submit" value="Create Post" />
+          </form>
+        </div>
       </div>
     </div>
-  </div>
 
-</main>
-{% else %}
-<main id="feed">
-  <p>No posts to display.</p>
-  <button class="create-post-btn">Create New Post</button>
+  </main>
+  {% else %}
+  <main id="feed">
+    <p>No posts to display.</p>
+    <button class="create-post-btn">Create New Post</button>
 
-  <!-- Modal for creating a post -->
-  <div id="createPostModal" class="modal">
-    <div class="modal-content">
-      <span class="close-btn" onclick="closeModal('#createPostModal')">&times;</span>
-      <div id="modalContent">
-        <form action="" method="post" novalidate enctype="multipart/form-data">
-          {% csrf_token %} 
-          {{ form.as_p }}
-          <input class="btn" type="submit" value="Create Post" />
-        </form>
+    <!-- Modal for creating a post -->
+    <div id="createPostModal" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" onclick="closeModal('#createPostModal')">&times;</span>
+        <div id="modalContent">
+          <form action="" method="post" novalidate enctype="multipart/form-data">
+            {% csrf_token %} 
+            {{ form.as_p }}
+            <input class="btn" type="submit" value="Create Post" />
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-</main>
-{% endif %}
+  </main>
+  {% endif %}
 {% else %}
 <main>
   <p>You haven't created your user profile yet.</p>
