--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -32,7 +32,7 @@
       </div>
       {% endfor %}
 
-      <div class="post">
+      <!-- <div class="post">
         <div class="post-img"></div>
         <div class="post-btns">
           <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
@@ -45,38 +45,8 @@
         </div>
         <div class="post-comments">View all 12 comments</div>
         <div class="post-date">2 days ago</div>
-      </div>
+      </div> -->
       
-      <div class="post">
-        <div class="post-img"></div>
-        <div class="post-btns">
-          <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
-          <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
-        </div>
-        <div class="post-likes"><span class="like-count">124</span> likes</div>
-        <div class="post-caption">
-          <span class="username">username</span>
-          <span class="caption-text">caption text will be placed...</span>
-        </div>
-        <div class="post-comments">View all 12 comments</div>
-        <div class="post-date">2 days ago</div>
-      </div>
-
-      <div class="post">
-        <div class="post-img"></div>
-        <div class="post-btns">
-          <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
-          <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
-        </div>
-        <div class="post-likes"><span class="like-count">124</span> likes</div>
-        <div class="post-caption">
-          <span class="username">username</span>
-          <span class="caption-text">caption text will be placed...</span>
-        </div>
-        <div class="post-comments">View all 12 comments</div>
-        <div class="post-date">2 days ago</div>
-      </div>
-    </div>
 
     <!-- Modal for creating a post -->
     <div id="createPostModal" class="modal">
