--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -70,6 +70,7 @@
           {% endfor %}
         </div>
         <span class="date-data">{{ post.created_at }}</span>
+      </div>
     </div>
     {% endfor %}
 
@@ -77,6 +78,7 @@
       <img src="{% static './community/images/test.jpeg' %}" alt="user post">
     </div> -->
     <!-- <div class="feed-post"></div> -->
+  
   </div>
 
   <div class="achievements toggle-posts">
