--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -19,6 +19,9 @@
         <div class="post-btns">
           <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
           <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+          <div>
+            <button class="post-more-btn"><img src="{% static './community/images/more-icon.svg'%}" alt="more button"></button>
+          </div>
         </div>
         <div class="post-likes"><span class="like-count">{{ post.get_like_count }}</span> likes</div>
         <div class="post-caption">
