--- a/app/project/community/static/community/styles/_mixins.scss
+++ b/app/project/community/static/community/styles/_mixins.scss
@@ -26,8 +26,13 @@
 
     .post-btns {
       display: flex;
-      gap: 12px;
+      justify-content: space-between;
       padding: 8px;
+
+      .interactive-btns {
+        display: flex;
+        gap: 12px;
+      }
 
       button {
         background-color: #FFFFFF00;
