--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -122,8 +122,13 @@
               <img src="" alt="user post">
             </div>
             <div class="post-btns">
-              <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
-              <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+              <div class="interactive-btns">
+                <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
+                <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
+              </div>
+              <div>
+                <button class="post-more-btn"><img src="{% static './community/images/more-icon.svg'%}" alt="more button"></button>
+              </div>
             </div>
             <div class="post-likes"><span class="like-count">124</span> likes</div>
             <div class="post-caption">
