Adding the new script to the feed and profile pages.

--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -3,6 +3,7 @@
 {% block scripts %}
 <script src="{% static './community/scripts/toggle-like.js' %}" defer></script>
 <script src="{% static './community/scripts/create-post.js' %}" defer></script>
+<script src="{% static './community/scripts/post-menu.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 {% if user_profile %}
