--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -4,6 +4,7 @@
 <script src="{% static './community/scripts/toggle-posts.js' %}" defer></script>
 <script src="{% static './community/scripts/view-post.js' %}" defer></script>
 <script src="{% static './community/scripts/create-profile.js' %}" defer></script>
+<script src="{% static './community/scripts/post-menu.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 {% if user_profile %}
