--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -210,7 +210,7 @@ main#profile {
       font-size: 3rem;
     }
 
-    @include post(100%, 100%);
+    @include post(100%);
     @include form();
 
   }
