--- a/app/project/community/static/community/styles/_mixins.scss
+++ b/app/project/community/static/community/styles/_mixins.scss
@@ -58,10 +58,15 @@
       margin: 12px 0;
       width: $width;
       min-width: 300px;
+      box-sizing: border-box;
 
       .username {
         font-weight: 700;
       }
+
+      // .caption-text {
+
+      // }
     }
 
     .post-comments {
