--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -14,14 +14,24 @@ main#profile {
       gap: 32px;
 
       .profile-photo {
-        width: 150px;
-        height: 150px;
+        width: 10vw;
+        height: 10vw;
+        max-width: 150px;
+        max-height: 150px;
+        min-width: 80px;
+        min-height: 80px;
+
         border-radius: 50%;
         border: 1px solid $black;
 
         img {
-          width: inherit;
-          height: inherit;
+          width: 10vw;
+          height: 10vw;
+          max-width: 150px;
+          max-height: 150px;
+          min-width: 80px;
+          min-height: 80px;
+
           object-fit: cover;
           border-radius: 50%;
         }
