--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -83,14 +83,22 @@ main#profile div.profile-top div.profile-header {
   gap: 32px;
 }
 main#profile div.profile-top div.profile-header .profile-photo {
-  width: 150px;
-  height: 150px;
+  width: 10vw;
+  height: 10vw;
+  max-width: 150px;
+  max-height: 150px;
+  min-width: 80px;
+  min-height: 80px;
   border-radius: 50%;
   border: 1px solid #000000;
 }
 main#profile div.profile-top div.profile-header .profile-photo img {
-  width: inherit;
-  height: inherit;
+  width: 10vw;
+  height: 10vw;
+  max-width: 150px;
+  max-height: 150px;
+  min-width: 80px;
+  min-height: 80px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 50%;
