--- a/app/project/community/static/community/styles/_mixins.scss
+++ b/app/project/community/static/community/styles/_mixins.scss
@@ -46,6 +46,23 @@
           display: flex;
           flex-direction: column;
           align-items: flex-end;
+          gap: 12px;
+
+          border: 1px solid $black;
+          border-radius: 8px;
+          padding: 8px;
+          margin-top: 12px;
+
+          span {
+            width: 100px;
+            text-align: center;
+            border-bottom: 1px solid #FFFFFF00;
+
+            &:hover {
+              cursor: pointer;
+              border-bottom: 1px solid $black;
+            }
+          }
         }
       }
 
