--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -297,6 +297,20 @@ main#profile .modal .modal-content .post .post-btns .post-action-group .post-act
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  gap: 12px;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  padding: 8px;
+  margin-top: 12px;
+}
+main#profile .modal .modal-content .post .post-btns .post-action-group .post-action-btns span {
+  width: 100px;
+  text-align: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0);
+}
+main#profile .modal .modal-content .post .post-btns .post-action-group .post-action-btns span:hover {
+  cursor: pointer;
+  border-bottom: 1px solid #000000;
 }
 main#profile .modal .modal-content .post .post-btns button {
   background-color: rgba(255, 255, 255, 0);
@@ -479,6 +493,20 @@ main#feed .posts .post .post-btns .post-action-group .post-action-btns {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  gap: 12px;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  padding: 8px;
+  margin-top: 12px;
+}
+main#feed .posts .post .post-btns .post-action-group .post-action-btns span {
+  width: 100px;
+  text-align: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0);
+}
+main#feed .posts .post .post-btns .post-action-group .post-action-btns span:hover {
+  cursor: pointer;
+  border-bottom: 1px solid #000000;
 }
 main#feed .posts .post .post-btns button {
   background-color: rgba(255, 255, 255, 0);
