--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -127,8 +127,12 @@
                 <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
                 <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
               </div>
-              <div>
+              <div class="post-action-group">
                 <button class="post-more-btn"><img src="{% static './community/images/more-icon.svg'%}" alt="more button"></button>
+                <div class="post-action-btns">
+                  <span>Edit Post</span>
+                  <span>Delete Post</span>
+                </div>
               </div>
             </div>
             <div class="post-likes"><span class="like-count">124</span> likes</div>
