--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -129,7 +129,7 @@
               </div>
               <div class="post-action-group">
                 <button class="post-more-btn"><img src="{% static './community/images/more-icon.svg'%}" alt="more button"></button>
-                <div class="post-action-btns">
+                <div class="post-action-btns hide-action-btns">
                   <span>Edit Post</span>
                   <span>Delete Post</span>
                 </div>
