--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -282,6 +282,7 @@ main#profile .modal .modal-content .post .post-img img {
 main#profile .modal .modal-content .post .post-btns {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   padding: 8px;
 }
 main#profile .modal .modal-content .post .post-btns .interactive-btns {
@@ -301,7 +302,10 @@ main#profile .modal .modal-content .post .post-btns .post-action-group .post-act
   border: 1px solid #000000;
   border-radius: 8px;
   padding: 8px;
-  margin-top: 12px;
+  z-index: 1;
+  background-color: #FFFFFF;
+  position: absolute;
+  margin-top: 24px;
 }
 main#profile .modal .modal-content .post .post-btns .post-action-group .post-action-btns span {
   width: 100px;
@@ -311,6 +315,9 @@ main#profile .modal .modal-content .post .post-btns .post-action-group .post-act
 main#profile .modal .modal-content .post .post-btns .post-action-group .post-action-btns span:hover {
   cursor: pointer;
   border-bottom: 1px solid #000000;
+}
+main#profile .modal .modal-content .post .post-btns .post-action-group .hide-action-btns {
+  visibility: hidden;
 }
 main#profile .modal .modal-content .post .post-btns button {
   background-color: rgba(255, 255, 255, 0);
@@ -478,6 +485,7 @@ main#feed .posts .post .post-img img {
 main#feed .posts .post .post-btns {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   padding: 8px;
 }
 main#feed .posts .post .post-btns .interactive-btns {
@@ -497,7 +505,10 @@ main#feed .posts .post .post-btns .post-action-group .post-action-btns {
   border: 1px solid #000000;
   border-radius: 8px;
   padding: 8px;
-  margin-top: 12px;
+  z-index: 1;
+  background-color: #FFFFFF;
+  position: absolute;
+  margin-top: 24px;
 }
 main#feed .posts .post .post-btns .post-action-group .post-action-btns span {
   width: 100px;
@@ -507,6 +518,9 @@ main#feed .posts .post .post-btns .post-action-group .post-action-btns span {
 main#feed .posts .post .post-btns .post-action-group .post-action-btns span:hover {
   cursor: pointer;
   border-bottom: 1px solid #000000;
+}
+main#feed .posts .post .post-btns .post-action-group .hide-action-btns {
+  visibility: hidden;
 }
 main#feed .posts .post .post-btns button {
   background-color: rgba(255, 255, 255, 0);
