--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -5,6 +5,7 @@
 <script src="{% static './community/scripts/view-post.js' %}" defer></script>
 <script src="{% static './community/scripts/create-profile.js' %}" defer></script>
 <script src="{% static './community/scripts/post-menu.js' %}" defer></script>
+<script src="{% static './community/scripts/edit-delete-post.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 {% if user_profile %}
@@ -130,8 +131,8 @@
               <div class="post-action-group">
                 <button class="post-more-btn"><img src="{% static './community/images/more-icon.svg'%}" alt="more button"></button>
                 <div class="post-action-btns hide-action-btns">
-                  <span>Edit Post</span>
-                  <span>Delete Post</span>
+                  <span class="edit-post-btn">Edit Post</span>
+                  <span class="delete-post-btn">Delete Post</span>
                 </div>
               </div>
             </div>
