--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -72,6 +72,10 @@
           <form action="" method="post" novalidate enctype="multipart/form-data">
             {% csrf_token %} 
             {{ form.as_p }}
+            <div style="display: none;">
+              <label for="post-id">ID: </label>
+              <input type="hidden" type="text" name="post-id" id="post-id" value="create">
+            </div>
             <input class="btn" type="submit" value="Create Post" />
           </form>
         </div>
@@ -86,6 +90,10 @@
           <form action="" method="post" novalidate enctype="multipart/form-data">
             {% csrf_token %} 
             {{ form.as_p }}
+            <div style="display: none;">
+              <label for="post-id">ID: </label>
+              <input type="hidden" type="text" name="post-id" id="post-id" value="edit">
+            </div>
             <input class="btn" type="submit" value="Edit Post" />
           </form>
         </div>
@@ -100,6 +108,10 @@
           <form action="" method="post" novalidate enctype="multipart/form-data">
             {% csrf_token %} 
             {{ form.as_p }}
+            <div style="display: none;">
+              <label for="post-id">ID: </label>
+              <input type="hidden" type="text" name="post-id" id="post-id" value="delete">
+            </div>
             <input class="btn" type="submit" value="Delete Post" />
           </form>
         </div>
