--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -156,6 +156,10 @@
           <form action="" method="post" novalidate enctype="multipart/form-data">
             {% csrf_token %} 
             {{ form.as_p }}
+            <div style="display: none;">
+              <label for="post-id">ID: </label>
+              <input type="hidden" type="text" name="post-id" id="post-id" value="edit">
+            </div>
             <input class="btn" type="submit" value="Edit Post" />
           </form>
         </div>
@@ -170,6 +174,10 @@
           <form action="" method="post" novalidate enctype="multipart/form-data">
             {% csrf_token %} 
             {{ form.as_p }}
+            <div style="display: none;">
+              <label for="post-id">ID: </label>
+              <input type="hidden" type="text" name="post-id" id="post-id" value="delete">
+            </div>
             <input class="btn" type="submit" value="Delete Post" />
           </form>
         </div>
