--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -93,6 +93,7 @@
             <div style="display: none;">
               <label for="post-id">ID: </label>
               <input type="hidden" type="text" name="post-id" id="post-id" value="edit">
+              <input type="hidden" type="text" name="post-id-to-edit" id="post-id-to-edit" value="{{ post.id }}">
             </div>
             <input class="btn" type="submit" value="Edit Post" />
           </form>
@@ -111,6 +112,7 @@
             <div style="display: none;">
               <label for="post-id">ID: </label>
               <input type="hidden" type="text" name="post-id" id="post-id" value="delete">
+              <input type="hidden" type="text" name="post-id-to-delete" id="post-id-to-delete" value="{{ post.id }}">
             </div>
             <input class="btn" type="submit" value="Delete Post" />
           </form>
