--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -40,6 +40,9 @@
         <div class="post-comments">{{ comment.text }}</div>
         {% endfor %}
         <div class="post-date">{{ post.created_at }}</div>
+        <div class="post-id-details" style="display: none;">
+          <span class="post-id-data">{{ post.id }}</span>
+        </div>
       </div>
       {% endfor %}
 
@@ -93,7 +96,7 @@
             <div style="display: none;">
               <label for="post-id">ID: </label>
               <input type="hidden" type="text" name="post-id" id="post-id" value="edit">
-              <input type="hidden" type="text" name="post-id-to-edit" id="post-id-to-edit" value="{{ post.id }}">
+              <input type="hidden" type="text" name="post-id-to-edit" id="post-id-to-edit" value="X">
             </div>
             <input class="btn" type="submit" value="Edit Post" />
           </form>
@@ -112,7 +115,7 @@
             <div style="display: none;">
               <label for="post-id">ID: </label>
               <input type="hidden" type="text" name="post-id" id="post-id" value="delete">
-              <input type="hidden" type="text" name="post-id-to-delete" id="post-id-to-delete" value="{{ post.id }}">
+              <input type="hidden" type="text" name="post-id-to-delete" id="post-id-to-delete" value="X">
             </div>
             <input class="btn" type="submit" value="Delete Post" />
           </form>
