--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -137,6 +137,9 @@
                 </div>
               </div>
             </div>
+            <div class="post-id-details" style="display: none;">
+              <span class="post-id-data">X</span>
+            </div>
             <div class="post-likes"><span class="like-count">124</span> likes</div>
             <div class="post-caption">
               <span class="username">username</span>
