--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -184,6 +184,7 @@
               <input type="hidden" type="text" name="post-id" id="post-id" value="delete">
               <input type="hidden" type="text" name="post-id-to-delete" id="post-id-to-delete" value="X">
             </div>
+            <p>Are you sure you would like to delete this post?</p>
             <input class="btn" type="submit" value="Delete Post" />
           </form>
         </div>
