--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -1,6 +1,7 @@
 {% extends './base.html' %} 
 {% load static %} 
 {% block scripts %}
+<script src="{% static './community/scripts/toggle-like.js' %}" defer></script>
 <script src="{% static './community/scripts/toggle-posts.js' %}" defer></script>
 <script src="{% static './community/scripts/view-post.js' %}" defer></script>
 <script src="{% static './community/scripts/create-profile.js' %}" defer></script>
